--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# IDE settings
+.vscode/
+
 # Compiled class file
 *.class
 
@@ -22,3 +25,12 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Maven build
+dependency-reduced-pom.xml
+build/
+target/
+
+# Custom test files
+*.txt
+*.json
